PR/55118: Andreas Gustafsson: Oops, set the right flag variable.